syntax = "proto3";
package svapi;

option go_package = "github.com/cloudzenith/DouTok/...;svapi";

import "google/api/annotations.proto";
import "buf/validate/validate.proto";
import "svapi/base.proto";

service ShortVideoCoreVideoService {
    // 预注册上传视频
    rpc PreSign4UploadVideo(PreSign4UploadVideoRequest) returns (PreSign4UploadVideoResponse) {
        option (google.api.http) = {
            post: "/video/upload"
            body: "*"
        };
    };

    // 预注册上传封面
    rpc PreSign4UploadCover(PreSign4UploadRequest) returns (PreSign4UploadResponse) {
        option (google.api.http) = {
            post: "/cover/upload"
            body: "*"
        };
    };

    // 通用确认上传完成
    rpc ReportFinishUpload(ReportFinishUploadRequest) returns (ReportFinishUploadResponse) {
        option (google.api.http) = {
            post: "/file/{file_id}/finish"
            body: "*"
        };
    };

    // 确认视频上传完成
    rpc ReportVideoFinishUpload(ReportVideoFinishUploadRequest) returns (ReportVideoFinishUploadResponse) {
        option (google.api.http) = {
            post: "/video/finish"
            body: "*"
        };
    };

    // 刷视频
    rpc FeedShortVideo(FeedShortVideoRequest) returns (FeedShortVideoResponse) {
        option (google.api.http) = {
            post: "/video/feed"
            body: "*"
        };
    };

    // 获取视频信息
    rpc GetVideoById(GetVideoByIdRequest) returns (GetVideoByIdResponse) {
        option (google.api.http) = {
            get: "/video/{video_id}"
        };
    };

    // 获取当前用户的发布视频列表
    rpc ListPublishedVideo(ListPublishedVideoRequest) returns (ListPublishedVideoResponse) {
        option (google.api.http) = {
            post: "/video/list"
            body: "*"
        };
    };
}

// 预注册上传视频请求消息类型
message PreSign4UploadVideoRequest {
    // md5 hash
    string hash = 1;
    // 文件类型，默认mp4
    string file_type = 2;
    // 文件大小，单位byte
    // @gotags: json:"size,omitempty,string"
    int64 size = 3;
    // 文件名
    string filename = 4;
}

// 预注册上传视频响应消息类型
message PreSign4UploadVideoResponse {
    // minio上传地址
    string url = 1;
    // 文件id
    // @gotags: json:"file_id,omitempty,string"
    int64 file_id = 2;
}

// 通用小文件单次上传请求消息类型
message PreSign4UploadRequest {
    // md5 hash
    string hash = 1;
    // 文件类型，默认mp4
    string file_type = 2;
    // 文件大小，单位byte
    // @gotags: json:"size,omitempty,string"
    int64 size = 3;
    // 文件名
    string filename = 4;
}

// 通用小文件单次上传响应消息类型
message PreSign4UploadResponse {
    // minio上传地址
    string url = 1;
    // 文件id
    // @gotags: json:"file_id,omitempty,string"
    int64 file_id = 2;
}

// 确认视频上传完成请求消息类型
message ReportVideoFinishUploadRequest {
    // 文件id
    // @gotags: json:"file_id,omitempty,string"
    int64 file_id = 1;
    // 视频标题
    string title = 3;
    // 视频封面地址
    string cover_url = 4;
    // 视频描述
    string description = 5;
    // 视频地址
    string video_url = 6;
}

// 确认视频上传完成响应消息类型
message ReportVideoFinishUploadResponse {
    // 视频id
    // @gotags: json:"video_id,omitempty,string"
    int64 video_id = 1;
}

// 通用确认上传完成请求消息类型
message ReportFinishUploadRequest {
    // 文件id
    // @gotags: json:"file_id,omitempty,string"
    int64 file_id = 1;
}

// 通用确认上传完成响应消息类型
message ReportFinishUploadResponse {
    // url
    string url = 1;
}

// 刷视频请求消息类型
message FeedShortVideoRequest {
    // @gotags: json:"latest_time,omitempty,string"
    int64 latest_time = 1;  // 可选参数，限制返回视频的最新投稿时间戳，精确到秒，不填表示当前时间
    // @gotags: json:"user_id,omitempty,string"
    int64 user_id = 2 [(buf.validate.field).int64 = {gt: 0}];
    // @gotags: json:"feed_num,omitempty,string"
    int64 feed_num = 3 [(buf.validate.field).int64 = {gt: 0}]; // 返回视频的数量
}

// 刷视频响应消息类型
message FeedShortVideoResponse {
    svapi.Metadata meta = 1;
    repeated Video videos = 2;
    // @gotags: json:"next_time,omitempty,string"
    int64 next_time = 3; // 本次返回的视频中，发布最早的时间，作为下次请求时的latest_time
}

// 获取视频信息请求消息类型
message GetVideoByIdRequest {
    // @gotags: json:"video_id,omitempty,string"
    int64 video_id = 1 [(buf.validate.field).int64 = {gt: 0}];
}

// 获取视频信息响应消息类型
message GetVideoByIdResponse {
    Video video = 2;
}

// 获取当前用户的发布视频列表请求消息类型
message ListPublishedVideoRequest {
    // @gotags: json:"user_id,omitempty,string"
    int64 user_id = 1 [(buf.validate.field).int64 = {gt: 0}];
    PaginationRequest pagination = 2;
}

// 获取当前用户的发布视频列表响应消息类型
message ListPublishedVideoResponse {
    repeated Video video_list = 2;
    PaginationResponse pagination = 3;
}


